# osedea-workshop-langgraph-langfuse

./: .gitignore  README.md  old-content.md  pyproject.toml  setup-envs.sh  slideshow.md
documentation/: code-walkthrough.md  slideshow-en.md  slideshow-fr.md
steps/1-linear-workflow/: main.py
steps/1-workflow/: .env.example  main.py
steps/2-langfuse/: main.py
steps/2-loop/: log with osedea and no result.txt  main.py
steps/3-langfuse/: main.py
steps/3-prompts/: .env.example  main.py
steps/4-prompts/: README.md  main.py
steps/4-users/: main.py
steps/5-sessions/: main.py
steps/5-users/: README.md  main.py
steps/6-sessions/: README.md  main.py
steps/6-user-feedback/: main.py
steps/7-user-feedback/: .env.example  README.md  main.py
