[project]
name = "test-langfuse-example-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-openai>=0.3.17",
    "langfuse>=2.60.5",
    "langgraph>=0.4.5",
    "tavily-python>=0.7.2",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
